--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 img {
-  max-width: 100%;
+  max-width: 85%;
 }
 
 .cart-btn {
@@ -418,16 +418,14 @@ p{
   display: inline-block;
 }
 .card-header img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
+  height: 100px;
 }
 .card-body {
   display: flex;
   flex-direction: column;
   align-items: c;
   padding: 5px;
-  min-height: 200px;
+  min-height: 300px;
 }
 
 .tag {
@@ -616,7 +614,7 @@ p{
 }
 
 .card img{
-  height: 400px;
+  height: 40vh;
   width: 600px;
 }
 
