--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ p{
 }
 
 .despre{
-	background: url(food.jpg);
+	background: url(food.png);
 	font-family:"Brush Script MT", cursive;
 	color: darkred;
 }
